# charlie

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  Dockerfile  Makefile  PROBLEMS.md  TODO.md  generate_proto.bash  valgrind.supp
cmake/Modules/: FindEVENT2.cmake  FindIntl.cmake  Findcppnetlib.cmake
include/: .gitignore  Common.h  IntTypes.h  Logging.h  Module.h  ModuleAPI.h  ModuleInterface.h  ModuleNet.h  Plugin.h  SModuleInterface.h  ServerModule.h  orconfig.h
include/charlie/: Crypto.h  CryptoBuf.h  ManagerModule_Data.h  ModuleInstance.h  ModuleInterImpl.h  ModuleManager.h  ModuleTable_Data.h  ServerKey_Data.h  StateChangeEvent.h  System.h  SystemInfo.h  TestPlugin_Data.h  curl.h  hash.h  machine_id.h  random.h  smear.h  xor.h
include/cserver/: ModuleInterface.h  ModuleTable.h  NetHost.h  ServerModuleInstance.h  StaticFileHost.h  System.h  WebHost.h
include/cserver/HTTPEndpoint/: HTTPEndpoint.h
include/cserver/networking/: CharlieClient.h
include/http/: connection.h  connection_manager.h  header.h  mime_types.h  reply.h  request.h  request_handler.h  request_parser.h  server.h
include/modules/client/: Client.h  ClientInter.h
include/modules/directconnect/: DirectConnect.h  DirectConnectInter.h
include/modules/manager/: Client.h  Manager.h  ManagerInter.h
include/modules/persist/: Persist.h  PersistInter.h  PersistMethod.h
include/modules/persist/methods/linux/: PersistAutostart.h  PersistHome.h
include/modules/torm/: TorC.h  Torm.h  TormInter.h  socks5.hpp
include/networking/: CharlieSession.h  EMsgSizes.h  ISessionController.h  packedmessage.h
include/pow/: hashcash.h  pow.h
include/proto/: charlie.pb.h
include/server_modules/client/: Client.h
include/server_modules/manager/: Manager.h
include/server_modules/mongo/: Mongo.h
include/server_modules/persist/: Persist.h
include/server_proto/: charlie_server.pb.h
include/testplugin/: testplugin.h
include/tor/: orconfig.lin.h  orconfig.win.h
resources/: setuptor.expect  startup.bash
resources/crashes/: crash.log.1
resources/docker/charlie/: Dockerfile  build.bash
resources/docker/kubernetes/: .gitignore  charlie-rc.yaml  charlie-service.yaml  config-to-secret.sh  torhost-hsconfig-template.yaml  torhost-rc.yaml  torhost-service.yaml
resources/docker/torhost/: Dockerfile  build.bash  rinetd.conf  setuptor.expect  startup.bash  torrc
resources/identity/: .gitignore  README  server_identity  server_key  server_key.pub  test
resources/protobufs/: charlie.proto  charlie_net.proto  charlie_server.proto
resources/protoc/: protoc
resources/tor/: tor
resources/tor/hidden_service/: hostname  private_key
src/charlie/: Crypto.cpp  CryptoBuf.cpp  EmbeddedData.cpp  ModuleInstance.cpp  ModuleInterImpl.cpp  ModuleInterface.cpp  ModuleManager.cpp  System.cpp  base64.cpp  hash.cpp  machine_id.cpp  main.cpp  random.cpp  smear.cpp  xor.cpp
src/config/: init.json  initmtable.json
src/cserver/: CharlieClient.cpp  ModuleTable.cpp  NetHost.cpp  ServerModuleInstance.cpp  StaticFileHost.cpp  System.cpp  WebHost.cpp  main.cpp
src/cutils/: main.cpp
src/embed/: main.cpp
src/http/: connection.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
src/modules/client/: client.cpp  module.cmake
src/modules/directconnect/: directconnect.cpp
src/modules/manager/: client.cpp  manager.cpp  module.cmake
src/modules/persist/: module.cmake  persist.cpp
src/modules/persist/methods/linux/: gnome.cpp  home.cpp
src/modules/torm/: module.cmake  torc.c  torm.cpp
src/networking/: CharlieSession.cpp  emsgsizes.cpp
src/pow/: fastmint_altivec_compact_2.c  fastmint_altivec_standard_1.c  fastmint_altivec_standard_2.c  fastmint_ansi_compact_1.c  fastmint_ansi_compact_2.c  fastmint_ansi_standard_1.c  fastmint_ansi_standard_2.c  fastmint_ansi_ultracompact_1.c  fastmint_library.c  fastmint_mmx_compact_1.c  fastmint_mmx_standard_1.c  libfastmint.c  libhc.c  libsha1.c  pow.cpp  random.c  sha1.c  sstring.c  utct.c
src/proto/: charlie.pb.cc  charlie.proto  charlie_net.proto  charlie_server.proto  client.proto  manager.proto  persist.proto  torm.proto
src/server_modules/client/: client.cpp  module.cmake
src/server_modules/manager/: manager.cpp  module.cmake
src/server_modules/mongo/: module.cmake  mongo.cpp
src/server_modules/persist/: module.cmake  persist.cpp
src/server_proto/: charlie_server.pb.cc
src/sidentity/: main.cpp
src/test/: main.cpp
src/testplugin/: testplugin.cpp
templates/module/: Module.h  ModuleInter.h  create.bash  module.cmake  module.cpp  module.proto
templates/server_module/: Module.h  create.bash  module.cmake  module.cpp
